--- a/UnityLauncherPro/UnityLauncherPro.csproj
+++ b/UnityLauncherPro/UnityLauncherPro.csproj
@@ -75,6 +75,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="GetProjects.cs" />
+    <Compile Include="Tools.cs" />
     <Compile Include="UnityInstallations.cs" />
     <Compile Include="Updates.cs" />
     <Page Include="Resources\Colors.xaml">
