add rootfolders settings, add rootfolder scanning, cleanup, add arrowkey up/down for upgrade search box,

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -16,6 +16,14 @@
             <setting name="windowHeight" serializeAs="String">
                 <value>650</value>
             </setting>
+            <setting name="rootFolders" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string>C:\Program Files\</string>
+                    </ArrayOfString>
+                </value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
