add F5 key to refresh grids, fix nullref on keydown when no search results, add copy unity version to installed grid, add download in browser and release notes button code for updates, add minimize to taskbar option code, add register explorer context menu,

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -24,6 +24,12 @@
                     </ArrayOfString>
                 </value>
             </setting>
+            <setting name="minimizeToTaskbar" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="registerExplorerMenu" serializeAs="String">
+                <value>False</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
