--- a/UnityLauncherPro/Properties/Settings.settings
+++ b/UnityLauncherPro/Properties/Settings.settings
@@ -14,5 +14,11 @@
   &lt;string&gt;C:\Program Files\&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
+    <Setting Name="minimizeToTaskbar" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="registerExplorerMenu" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
