add grid column width settings, add settings for show/hide arguments and gitbranch columns

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -30,6 +30,21 @@
             <setting name="registerExplorerMenu" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="closeAfterProject" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="closeAfterExplorer" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="showArgumentsColumn" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="showGitBranchColumn" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="gridColumnWidths" serializeAs="String">
+                <value>123</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
