add close after launch or after explorer launch, add show gitbranch and launcher arguments code, add commandline launching, cleanup newlines from custom arguments and gitbranch data, fix upgradedialog appearing from commandline while shift is pressed,

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -42,8 +42,8 @@
             <setting name="showGitBranchColumn" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="gridColumnWidths" serializeAs="String">
-                <value>123</value>
+            <setting name="showFullModifiedTime" serializeAs="String">
+                <value>False</value>
             </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
