add doubleclick to datagrids (launch project, run unity, open release page), add option to show projects with missing folder, add option for allow single instance only (to not run multiple launchers), update unity button takes you into updates tab with that version selected,  #build

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -42,6 +42,12 @@
             <setting name="showGitBranchColumn" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="showProjectsMissingFolder" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AllowSingleInstanceOnly" serializeAs="String">
+                <value>False</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
