fix unknown unity version starting (expermental versions dont have dictionary key), adding preferred version option, move SetFocusToGrid in tools,

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -48,6 +48,9 @@
             <setting name="AllowSingleInstanceOnly" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="preferredVersion" serializeAs="String">
+                <value />
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
