fix add project button, add Fast Create button (to create empty project in 1 click), add new projects root folder setting field

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -51,6 +51,9 @@
             <setting name="preferredVersion" serializeAs="String">
                 <value />
             </setting>
+            <setting name="newProjectsRoot" serializeAs="String">
+                <value />
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
