add option to show new project dialog and set project name (for Quick Project), fix empty row in recent project grid, #build

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -54,6 +54,9 @@
             <setting name="newProjectsRoot" serializeAs="String">
                 <value />
             </setting>
+            <setting name="askNameForQuickProject" serializeAs="String">
+                <value>True</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
