--- a/UnityLauncherPro/Properties/Settings.settings
+++ b/UnityLauncherPro/Properties/Settings.settings
@@ -47,5 +47,8 @@
     <Setting Name="newProjectsRoot" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="askNameForQuickProject" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
