add option to disable project folder rename, fix nullref if try to rename after added project, disable grid navigation keys during cell edit, validate project rename better and restore old value if failed, #build

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -57,6 +57,9 @@
             <setting name="askNameForQuickProject" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="enableProjectRename" serializeAs="String">
+                <value>False</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
