add StreamerMode option to hide project names and paths (font is set to 1.0)

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -60,6 +60,9 @@
             <setting name="enableProjectRename" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="streamerMode" serializeAs="String">
+                <value>False</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
