add target platform column (checked from Assembly-CSharp.csproj) and setting, rename GITBranch column header to Branch

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -63,6 +63,9 @@
             <setting name="streamerMode" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="showTargetPlatform" serializeAs="String">
+                <value>False</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
