add webgl relative build path setting field

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -66,6 +66,9 @@
             <setting name="showTargetPlatform" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="webglBuildPath" serializeAs="String">
+                <value />
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
