--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -69,6 +69,9 @@
             <setting name="webglBuildPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="useCustomTheme" serializeAs="String">
+                <value>False</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
