add theme loader options (theme filename, theme reload, save/load to settings)

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -72,6 +72,9 @@
             <setting name="useCustomTheme" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="themeFile" serializeAs="String">
+                <value>theme.ini</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
