--- a/UnityLauncherPro/Properties/Settings.settings
+++ b/UnityLauncherPro/Properties/Settings.settings
@@ -65,5 +65,8 @@
     <Setting Name="useCustomTheme" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="themeFile" Type="System.String" Scope="User">
+      <Value Profile="(Default)">theme.ini</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
