add settings checkbox for platform selector dropdown (default disabled), cleaning up combobox template

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -75,6 +75,9 @@
             <setting name="themeFile" serializeAs="String">
                 <value>theme.ini</value>
             </setting>
+            <setting name="enablePlatformSelection" serializeAs="String">
+                <value>False</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
