add option: run automatically on startup

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -78,6 +78,9 @@
             <setting name="enablePlatformSelection" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="runAutomatically" serializeAs="String">
+                <value>False</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
