take last modified date from project folder, add custom last modified date format setting, add human friendly last modified date option

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -81,6 +81,15 @@
             <setting name="runAutomatically" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="useCustomLastModified" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="customDateFormat" serializeAs="String">
+                <value>dd/MM/yyyy HH:mm:ss</value>
+            </setting>
+            <setting name="useHumandFriendlyLastModified" serializeAs="String">
+                <value>False</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
