buildreport (#49): add file format column, load/save column widths with preferences, parse projectpath from editorlog, add contect menu and double click to open buildreport file with Explorer select file, rename BuildReport struct to BuildReportItem

--- a/UnityLauncherPro/Properties/Settings.settings
+++ b/UnityLauncherPro/Properties/Settings.settings
@@ -86,5 +86,8 @@
     <Setting Name="recentColumnsOrder" Type="System.Int32[]" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="gridColumnWidthsBuildReport" Type="System.Int32[]" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
