add button focused small outline color & definition (ThemeButtonFocusOutline), add run automatically minimized option

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -90,6 +90,9 @@
             <setting name="useHumandFriendlyLastModified" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="runAutomaticallyMinimized" serializeAs="String">
+                <value>False</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
