add logcat args textbox (fixes #53)

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -93,6 +93,9 @@
             <setting name="runAutomaticallyMinimized" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="adbLogCatArgs" serializeAs="String">
+                <value>-s Unity ActivityManager PackageManager dalvikvm DEBUG -v color</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
