if project is already launched then bring Unity instance to front, move Editor process references to separate class (so that it doesn't reset on project list refresh, fixes #19 )

--- a/UnityLauncherPro/UnityLauncherPro.csproj
+++ b/UnityLauncherPro/UnityLauncherPro.csproj
@@ -82,6 +82,7 @@
     <Compile Include="GetProjects.cs" />
     <Compile Include="GetUnityInstallations.cs" />
     <Compile Include="GetUnityUpdates.cs" />
+    <Compile Include="Helpers\ProcessHandler.cs" />
     <Compile Include="Libraries\ExtractTarGz.cs" />
     <Compile Include="NewProject.xaml.cs">
       <DependentUpon>NewProject.xaml</DependentUpon>
