Add custom ProjectName.txt support, Add rename project title (saves into ProjectSettings/ProjectName.txt file), Add setting for taking projectname from Folder or ProjectName.txt override, or from Player settings ProductName field, REMOVED: Project folder rename (it was too dangerous, rather rename folder from Explorer if needed), fixed nullref if pressed F2 (rename) when recent grid was not selected, #BUILD

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -96,6 +96,9 @@
             <setting name="adbLogCatArgs" serializeAs="String">
                 <value>-s Unity ActivityManager PackageManager dalvikvm DEBUG -v color</value>
             </setting>
+            <setting name="projectName" serializeAs="String">
+                <value>0</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
