clear search after add project manually (otherwise cannot see it, unless it matches search), adding template folder option for new projects

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -99,6 +99,9 @@
             <setting name="projectName" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="templatePackagesFolder" serializeAs="String">
+                <value />
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
