new project: added platform selection, load/save last used platform selection,

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -102,6 +102,9 @@
             <setting name="templatePackagesFolder" serializeAs="String">
                 <value />
             </setting>
+            <setting name="newProjectPlatform" serializeAs="String">
+                <value />
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
