--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -105,6 +105,9 @@
             <setting name="newProjectPlatform" serializeAs="String">
                 <value />
             </setting>
+            <setting name="searchProjectPathAlso" serializeAs="String">
+                <value>False</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
