add plastic branch check option and method, move webgl launcher to Tools,

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -108,6 +108,9 @@
             <setting name="searchProjectPathAlso" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="checkPlasticBranch" serializeAs="String">
+                <value>False</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
