Add CreateShortcut context menu for projects (creates shortcut to desktop for launching project directly), streamermode: hide batch folder text (as it defaults to user folder), hide quick project folder text (as it might contain private folders), settings: add shortcut .bat folder location (defaults to appdata), fix settings stackpanel widths (bigger than window), add initialdirectory optional arg for BrowseForOutputFolder()

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -111,6 +111,9 @@
             <setting name="checkPlasticBranch" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="shortcutBatchFileFolder" serializeAs="String">
+                <value />
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
