upgrade project to vs2022, use create new project dialog when opening empty folder project from context menu

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -16,14 +16,6 @@
             <setting name="windowHeight" serializeAs="String">
                 <value>650</value>
             </setting>
-            <setting name="rootFolders" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string>C:\Program Files\</string>
-                    </ArrayOfString>
-                </value>
-            </setting>
             <setting name="minimizeToTaskbar" serializeAs="String">
                 <value>True</value>
             </setting>
@@ -113,6 +105,13 @@
             </setting>
             <setting name="shortcutBatchFileFolder" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="rootFolders" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string>C:\Program Files\</string>
+                    </ArrayOfString>
+                </value>
             </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
