Settings tab: make background focusable (so can click focus away from textbox), New project: lock project name if creating new project from context menu (since it takes folder name), fix project creation inside current folder (instead of creating new project there), rename init method to: "executeMethod UnityLauncherProTools.InitializeProject.Init", Settings: save custom init script values and toggle

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -113,6 +113,12 @@
                     </ArrayOfString>
                 </value>
             </setting>
+            <setting name="customInitFile" serializeAs="String">
+                <value>InitializeProject.cs</value>
+            </setting>
+            <setting name="useInitScript" serializeAs="String">
+                <value>False</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
