add webgl default port settings field

--- a/UnityLauncherPro/App.config
+++ b/UnityLauncherPro/App.config
@@ -119,6 +119,9 @@
             <setting name="useInitScript" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="webglPort" serializeAs="String">
+                <value>50000</value>
+            </setting>
         </UnityLauncherPro.Properties.Settings>
     </userSettings>
 </configuration>
